# macchanger

./: .gitignore  AUTHORS  Android.mk  ChangeLog  Makefile.am  README  autogen.sh  configure  configure.ac  configure.in  macchanger.1
.github/workflows/: ci_ubuntu_latest.yml
CI/: run-valgrind.py  run.sh
data/: Android.mk  Makefile.am  OUI.list  wireless.list
doc/: Makefile.am  macchanger.info  macchanger.texi  stamp-vti
src/: Android.mk  Makefile.am  common.c  common.h  mac.c  mac.h  maclist.c  maclist.h  main.c  netinfo.c  netinfo.h
tools/: IEEE_OUI.py
